Fixed an Overflow Problem (#2)

--- a/WEEKATHON/css/style.css
+++ b/WEEKATHON/css/style.css
@@ -46,7 +46,7 @@ Table of contents
 ====================================== */
 
 body{ font-family: 'Roboto', sans-serif; -webkit-font-smoothing: antialiased;  font-smoothing: antialiased; font-size:14px; color:#6f6f6f; font-weight: 400;line-height: 24px;}
-body, html { height: 100%; -moz-osx-font-smoothing: grayscale;}
+body, html { height: 100%; -moz-osx-font-smoothing: grayscale;overflow-x: hidden;}
 a, a:active, a:focus { color: #6f6f6f; text-decoration: none; }
 a:hover, a:active{color: #60A550; text-decoration: none;}
 a:focus, a:active, button:focus, button:active,.btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus {outline: none;}
